--- a/package.json
+++ b/package.json
@@ -9,7 +9,22 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "uuid": "^8.3.2",
+    "react-router-dom": "^5.2.0",
+    "date-fns": "^2.22.1",
+    "moment": "^2.29.1",
+    "@date-io/date-fns": "^1.3.13",
+    "@date-io/moment": "^1.3.13",
+    "@devexpress/dx-react-chart": "^2.7.6",
+    "@devexpress/dx-react-chart-material-ui": "^2.7.6",
+    "@devexpress/dx-react-core": "^2.7.6",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.33",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/x-grid-data-generator": "^4.0.0-alpha.33"
   },
   "scripts": {
     "start": "react-scripts start",
