--- a/package.json
+++ b/package.json
@@ -56,5 +56,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://quizeal-backend.herokuapp.com/"
+  "proxy": "http://localhost:8000/"
 }
