--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
-    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
@@ -56,5 +55,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://quizeal-backend.herokuapp.com/"
+  "proxy": "https://quizeal-backend.herokuapp.com"
 }
