--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Linting
+        run: npm run lint
+
       - name: Run the tests and generate coverage report
         run: npm test -- --coverage
 
