--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.21.2",
     "date-fns": "^2.22.1",
     "moment": "^2.29.1",
+    "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -41,7 +42,8 @@
     "eject": "react-scripts eject",
     "prepare": "husky install",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
-    "lint:js": "eslint --cache --fix src "
+    "lint:js": "eslint --cache --fix \"**/*.js\" ",
+    "lint:scss": "stylelint --cache --fix \"**/*.scss\" "
   },
   "eslintConfig": {
     "extends": [
@@ -71,7 +73,10 @@
     "eslint-plugin-react": "^7.28.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.7",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "stylelint": "^14.2.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard-scss": "^3.0.0"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
